# sub0-ink-challenges

./: .gitignore  README.md
app/: README.md  package.json  tsconfig.json
app/public/specs/: paseo-asset-hub.json
app/src/: App.tsx  types.ts
app/src/components/: AccountSelection.tsx
app/src/components/dialog/: WalletSelection.tsx
app/src/components/fungibles/: QueryTotalSupply.tsx  TxApprove.tsx  TxBurn.tsx  TxMint.tsx
app/src/components/shared/: BalanceInsufficientAlert.tsx  ContractQueryBadge.tsx  ContractTxBadge.tsx  MainFooter.tsx  MainHeader.tsx  NetworkSelection.tsx
app/src/contracts/fungibles/: fungibles.contract  fungibles.json
app/src/contracts/types/fungibles/: constructor-query.d.ts  query.d.ts  tx.d.ts
app/src/hooks/: useBalance.ts  useBalances.ts  useClient.ts  useContract.ts  useContractQuery.ts  useContractTx.ts  useDisplayAddress.tsx  useLoadMetadata.ts  useWallets.ts
app/src/providers/: ClientProvider.tsx  TypinkProvider.tsx
app/src/utils/: txToaster.tsx
app/src/utils/__tests__/: string.spec.ts
app/src/wallets/: Wallet.ts
challenges/challenge-1/: Cargo.toml  lib.rs
challenges/challenge-2/: Cargo.toml  lib.rs  types.rs
challenges/challenge-3/: Cargo.toml  lib.rs  types.rs  utils.rs
challenges/challenge-4/: Cargo.toml  lib.rs  types.rs
challenges/challenge-5/: Cargo.toml  lib.rs
challenges/challenge-5/frontend/: index.html
challenges/challenge-5/frontend/src/: main.tsx
challenges/challenge-5/frontend/src/components/dialog/: ConnectedWallet.tsx
challenges/challenge-5/frontend/src/components/fungibles/: FungiblesBoard.tsx  QueryAllowance.tsx  QueryTokenDecimals.tsx  QueryTokenName.tsx  QueryTokenSymbol.tsx  TxDecreaseAllowance.tsx  TxIncreaseAllowance.tsx  TxTransfer.tsx  TxTransferFrom.tsx
challenges/challenge-5/frontend/src/contracts/: deployments.ts
challenges/challenge-5/frontend/src/contracts/fungibles/: fungibles.wasm
challenges/challenge-5/frontend/src/contracts/types/fungibles/: constructor-tx.d.ts  events.d.ts  index.d.ts  types.d.ts
challenges/challenge-5/frontend/src/hooks/: useRawContract.ts  useRefresher.ts  useWatchContractEvent.ts
challenges/challenge-5/frontend/src/providers/: WalletProvider.tsx
challenges/challenge-5/frontend/src/utils/: networks.ts
challenges/challenge-5/frontend/src/wallets/: ExtensionWallet.ts
challenges/challenge-6/: README.md
challenges/challenge-7/: Cargo.toml  lib.rs
challenges/challenge-7/psp22/: Cargo.toml  lib.rs
common/: Cargo.toml  lib.rs
dao/: Cargo.toml  lib.rs  traits.rs  types.rs
