[package]
name = "dao-contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/r0gue-io/ink", branch = "sub0", default-features = false }
# superdao = { git = "https://github.com/r0gue-io/multichain-superdao", default-features = false, features = [
#     "ink-as-dependency",
# ] }
superdao = { path = "../../multichain-superdao/contracts/superdao", default-features = false, features = [
    "ink-as-dependency",
] }
superda0-traits = { path = "../../multichain-superdao/traits", default-features = false, features = [
    "ink-as-dependency",
] }
polkavm-derive = "0.11.0"

[lib]
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
