[package]
name = "challenge-2-contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false }
minidao-common = { path = "../../common", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "minidao-common/std"]
ink-as-dependency = []
e2e-tests = []
