[package]
name = "challenge-4-contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "xcm", default-features = false }

superda0-traits = { git = "https://github.com/r0gue-io/multichain-superdao", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "superda0-traits/std"]
ink-as-dependency = []
e2e-tests = []
